# chunkrank

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENCE  MAINTAINERS.md  README.md  chunkrank.md  pyproject.toml
chunkrank/: __init__.py  answerers.py  async_pipeline.py  cache.py  chunker.py  embeddings.py  models.py  pipeline.py  ranker.py  tokenizers.py
chunkrank/registry/: model_registry.json
chunkrank/utils/: __init__.py
examples/: example_answer_each_chunk_then_rank.py  example_rank_chunks_then_answer.py  example_use.py
tests/: test_async_pipeline.py  test_chunking.py  test_embedding_ranking.py  test_end_to_end.py  test_extreme_scenarios.py  test_new_features.py  test_production_e2e.py  test_retrieval_pipeline.py  test_semantic_chunking.py
