[project]
name = "chunkrank"
version = "1.0.0"
description = "Model-aware text chunking and answer re-ranking for LLM pipelines. Automatically adapts chunk size to tokenizer and context window, then consolidates and ranks answers across chunks."
authors = [
    { name = "Amit" }
]
readme = "README.md"
homepage = "https://github.com/AmitoVrito/chunkrank"
repository = "https://github.com/AmitoVrito/chunkrank"

license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "rank-bm25>=0.2.2"
]

[tool.poetry.urls]
"Source Code" = "https://github.com/AmitoVrito/chunkrank"
"Issue Tracker" = "https://github.com/AmitoVrito/chunkrank/issues"
"Documentation" = "https://github.com/AmitoVrito/chunkrank#readme"


[project.optional-dependencies]
semantic = ["sentence-transformers>=2.7"]
openai-embed = ["openai>=1.0"]
cohere-embed = ["cohere>=5.0"]
all = [
    "sentence-transformers>=2.7",
    "openai>=1.0",
    "anthropic>=0.25",
    "cohere>=5.0",
    "tiktoken>=0.7",
    "transformers>=4.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "ruff>=0.1",
    "deptry>=0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
